# ParserAI

./: .gitignore  README.md  parse.py  pyproject.toml
src/financial_parser/: __init__.py
src/financial_parser/chunking/: table_chunker.py
src/financial_parser/core/: exceptions.py  models.py  parser.py
src/financial_parser/csv/: reader.py
src/financial_parser/financial/: statement_detector.py
src/financial_parser/output/: json_formatter.py  markdown_formatter.py
src/financial_parser/xlsx/: reader.py
tests/: test_chunking.py  test_csv_reader.py  test_financial_detector.py  test_parser.py
